Remove BibTeX section and modify authors
Removed BibTeX section and updated authors list.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         <a href="#figures">Figures</a>
         <a href="#usecase">Use case</a>
         <a href="#cta">Call to action</a>
-        <a href="#bibtex">BibTeX</a>
       </nav>
     </div>
   </header>
@@ -66,7 +65,7 @@
 
           <div class="paper-meta">
             <div><span class="k">Authors:</span>
-              Judy Zhu<sup>1</sup>, Dhari Gandhi<sup>1</sup>, Dhanesh Ramachandram<sup>1</sup>, Ahmad Rezaie Mianroodi<sup>1,2</sup>, Shaina Raza<sup>1</sup>, Sedef Akinli Kocak<sup>1</sup>
+              Judy Zhu<sup>1</sup>, Dhari Gandhi<sup>1</sup>, Ahmad Rezaie Mianroodi<sup>1,2</sup>, Dhanesh Ramachandram<sup>1</sup>, Sedef Akinli Kocak<sup>1</sup>, Shaina Raza<sup>1</sup>
             </div>
             <div><span class="k">Affiliations:</span> <sup>1</sup>Vector Institute, <sup>2</sup>Dalhousie University</div>
           </div>
@@ -74,9 +73,7 @@
           <div class="cta-row">
             <!-- Replace href when public -->
             <a class="btn btn-disabled" href="#" aria-disabled="true" title="Upload the paper PDF to assets/ then link it">📄 Paper</a>
-            <a class="btn btn-secondary btn-disabled" href="#" aria-disabled="true" title="Coming soon">TechRxiv</a>
-            <a class="btn btn-secondary btn-disabled" href="#" aria-disabled="true" title="Coming soon">Code</a>
-            <button class="btn btn-secondary" id="copyBibBtn" type="button">📋 Copy BibTeX</button>
+            <a class="btn btn-secondary btn-disabled" href="#" aria-disabled="true" title="Coming soon">Preprint</a>
           </div>
 
           <p class="muted" style="margin-top:10px;">
@@ -390,33 +387,8 @@
       </div>
     </section>
 
-    <!-- BIBTEX -->
-    <section class="section alt" id="bibtex">
-      <div class="wrap">
-        <h2>BibTeX</h2>
-        <pre class="bib" id="bibBlock"><code>@inproceedings{atlis2026position,
-  title     = {Position: Accountable Deployment of Agentic AI Demands Layered, System-Level Interpretability},
-  author    = {Zhu, Judy and Gandhi, Dhari and Ramachandram, Dhanesh and Rezaie Mianroodi, Ahmad and Raza, Shaina and Kocak, Sedef Akinli},
-  booktitle = {TBD},
-  year      = {2026},
-  note      = {Under review}
-}</code></pre>
-        <p class="fineprint">Tip: keep venue as “TBD” until de-anonymization / acceptance.</p>
-      </div>
-    </section>
-
     <footer class="site-footer">
       <div class="wrap footer-inner">
-        <div>
-          <div class="footer-title">ATLIS</div>
-          <div class="footer-muted">From Models to Systems • <span id="year"></span></div>
-        </div>
-        <div class="footer-links">
-          <a href="#abstract">Abstract</a>
-          <a href="#figures">Figures</a>
-          <a href="#bibtex">BibTeX</a>
-          <a href="https://github.com/vectorinstitute/ATLIS" target="_blank" rel="noopener">GitHub</a>
-        </div>
       </div>
     </footer>
   </main>
